hard-gists/bb160e63686f517c93a937f46714dd03/run.log
=== Docker Run Log for bb160e63686f517c93a937f46714dd03 ===
Started at: Mi 29. Okt 19:35:16 CET 2025

[2025-10-29 19:35:16] START: Running container for bb160e63686f517c93a937f46714dd03
[2025-10-29 19:35:16] SUCCESS: Container b4b0c945614e55fac7a29db1a8e4102a242bd108168eae28d59733b55f92fde2 started for bb160e63686f517c93a937f46714dd03
=== Container logs for bb160e63686f517c93a937f46714dd03 ===
  File "/snippet.py", line 56
    print "0x%X:\t%s\t%s" % (i.address, i.mnemonic, i.op_str)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for bb160e63686f517c93a937f46714dd03 ===
[2025-10-29 19:35:18] INFO: Container b4b0c945614e55fac7a29db1a8e4102a242bd108168eae28d59733b55f92fde2 has stopped
